// Copyright 2016 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tokenserver;

import "google/protobuf/timestamp.proto";

// OAuth2AccessToken represent short lived OAuth2 access token that can be put
// into Authorization header.
message OAuth2AccessToken {
  string access_token = 1;              // the actual token
  string token_type = 2;                // type of the token, usually "Bearer"
  google.protobuf.Timestamp expiry = 3; // when the token expires
}
